--- a/overwolf-ltcrabbit/src/main/templates/monitor.html
+++ b/overwolf-ltcrabbit/src/main/templates/monitor.html
@@ -5,7 +5,7 @@
                 <div class="btn-group top-menu-column">
                     <a class="player-button player-button-visible player-button-enabled" href="#" onclick="app.openHomepage()"><i class="fa fa-globe fa-fw"></i></a>
                     <a class="player-button player-button-visible player-button-enabled" href="#" onclick="app.openConfigWindow('config')"><i class="fa fa-cogs fa-fw"></i></a>
-                    <a class="player-button player-button-visible player-button-enabled" href="#" onclick="app.openConfigWindow('about')"><i class="fa fa-certificate fa-fw"></i></a>
+                    <a class="player-button player-button-visible player-button-enabled" href="#" onclick="app.openConfigWindow('about')"><i class="fa fa-shield fa-fw"></i></a>
                 </div>
             </td>
             <td>
@@ -21,19 +21,22 @@
 <table width="100%">
   <tr>
     <td align="left"><span class="dev-info-alive">Balance<span></td>
-    <td align="right"><span class="dev-info-alive" id="Balance">n/a</span></td>
+    <td align="right" colspan="2"><span class="dev-info-alive" id="Balance">-</span></td>
   </tr>
   <tr>
     <td align="left"><span class="dev-info-alive">Hashrate</span></td>
-    <td align="right"><span class="dev-info-alive" id="Hashrate">n/a</span></td>
+    <td align="right"><span class="dev-info-alive" id="HashrateScrypt">-</span>&nbsp;</td>
+    <td align="right"><span class="dev-info-alive" id="HashrateX11">-</span></td>
   </tr>
   <tr>
     <td align="left"><span class="dev-info-alive">Sharerate</span></td>
-    <td align="right"><span class="dev-info-alive" id="Sharerate">n/a</span></td>
+    <td align="right"><span class="dev-info-alive" id="SharerateScrypt">-</span>&nbsp;</td>
+    <td align="right"><span class="dev-info-alive" id="InvalidX11">-</span></td>
   </tr>
   <tr>
     <td align="left"><span class="dev-info-alive">Invalid</span></td>
-    <td align="right"><span class="dev-info-alive" id="Invalid">n/a</span></td>
+    <td align="right"><span class="dev-info-alive" id="InvalidScrypt">-</span>&nbsp;</td>
+    <td align="right"><span class="dev-info-alive" id="InvalidX11">-</span></td>
   </tr>
 </table>
 </div>
