--- a/overwolf-soundcloud/src/main/index.css
+++ b/overwolf-soundcloud/src/main/index.css
@@ -1,10 +1,4 @@
 
-#webgl-clock {
-	position: absolute;
-	top: 0;
-	left: 0;	
-}
-
 .player-button {
 	vertical-align: middle;
 }
@@ -28,7 +22,7 @@
 	color: #fff;	
 	width: 100%;	
 	border-radius: 3px;
-	box-shadow: 0px 0px 10px rgba(0,0,0,0.6);
+	box-shadow: 0 0 10px rgba(0,0,0,0.6);
 	margin: 3px;
 	padding: 3px;
 }
@@ -36,7 +30,7 @@
 #TopMenu a:hover,
 #TopMenu activated a {
 	color: #fff;
-    text-shadow: 0px 0px 10px #fff;
+    text-shadow: 0 0 10px #fff;
 }
 
 #TopMenu {
