--- a/overwolf-soundcloud/src/main/templates/player.html
+++ b/overwolf-soundcloud/src/main/templates/player.html
@@ -25,7 +25,7 @@
                     &nbsp;
                     <a class="player-button player-button-enabled" href='#' onclick="app.volumeDown()"><i
 
-						class="fa fa-minus fa-fw"></i></a>10%
+						class="fa fa-minus fa-fw"></i></a><span id="player-volume">10%</span>
                     <a class="player-button player-button-enabled" href='#' onclick="app.volumeUp()"><i
 
 						class="fa fa-plus fa-fw"></i></a> &nbsp;&nbsp;
