--- a/overwolf-soundcloud/src/main/index.css
+++ b/overwolf-soundcloud/src/main/index.css
@@ -18,11 +18,11 @@
 .black-panel {
 	/* background-color: #0d0d0d; */
 	background-image: url("images/background.png");
-	background: linear-gradient(top, #1a1a1a, black);
+	background: linear-gradient(top, rgba(26,26,26,0.9), rgba(0,0,0,0.9));
 	color: #fff;	
 	width: 100%;	
 	border-radius: 3px;
-	box-shadow: 0 0 10px rgba(0,0,0,0.6);
+	box-shadow: 0 0 10px rgba(0,0,0,0.7);
 	margin: 3px;
 	padding: 3px;
 }
