--- a/overwolf-ltcrabbit/src/main/templates/monitor.html
+++ b/overwolf-ltcrabbit/src/main/templates/monitor.html
@@ -4,8 +4,8 @@
             <td width="100%">
                 <div class="btn-group top-menu-column">
                     <a class="player-button player-button-visible player-button-enabled" href="#" onclick="app.openHomepage()"><i class="fa fa-globe fa-fw"></i></a>
-                    <a class="player-button player-button-visible player-button-enabled" href="#" onclick="app.openConfigWindow('config')"><i class="fa fa-cogs fa-fw"></i></a>
-                    <a class="player-button player-button-visible player-button-enabled" href="#" onclick="app.openConfigWindow('about')"><i class="fa fa-shield fa-fw"></i></a>
+                    <a class="player-button player-button-visible player-button-enabled" href="#" onclick="app.openSettingsWindow('config')"><i class="fa fa-cogs fa-fw"></i></a>
+                    <a class="player-button player-button-visible player-button-enabled" href="#" onclick="app.openSettingsWindow('about')"><i class="fa fa-shield fa-fw"></i></a>
                 </div>
             </td>
             <td>
