--- a/overwolf-ltcrabbit/src/common/index.css
+++ b/overwolf-ltcrabbit/src/common/index.css
@@ -18,22 +18,26 @@ body, h1, h2, h3, h4, h5, h6, p, a {
 /* Let's get this party started */
 ::-webkit-scrollbar {
     width: 7px;
+    height: 7px;    
 }
- 
+
 /* Track */
 ::-webkit-scrollbar-track {
+    /*
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
     -webkit-border-radius: 5px;
     border-radius: 5px;
+    */
+    background: #0d0d0d;
 }
  
 /* Handle */
 ::-webkit-scrollbar-thumb {
     -webkit-border-radius: 10px;
     border-radius: 5px;
-    background: rgba(255,0,0,0.8); 
+    background: rgba(80,80,80,1); 
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
 }
 ::-webkit-scrollbar-thumb:window-inactive {
-	background: rgba(255,0,0,0.4); 
+	background: rgba(26,26,26,1); 
 }
