--- a/overwolf-ltcrabbit/src/settings/templates/about.html
+++ b/overwolf-ltcrabbit/src/settings/templates/about.html
@@ -7,7 +7,7 @@
                         <center>
                             <img src='../icons/logo.gif' />
                             <div>
-                                <a href='javascript: window.open({{ self.referredLink }})'><h2 style="text-shadow: 0px 0px 10px #fff;"><strong>LTCRABBIT</strong></h2></a>
+                                <a href='javascript: window.open("{{ self.referredLink }}")'><h2 style="text-shadow: 0px 0px 10px #fff;"><strong>LTCRABBIT</strong></h2></a>
                                 <p>Version {{ self.common.manifest.meta.version }}</p>
                             </div>
                         </center>
@@ -17,7 +17,7 @@
                     <td>
                         <div class='txt-about'>
                             <p>This application is meant to monitor your
-                                <a href='javascript: window.open({{ self.referredLink }})'>LTCRabbit</a>mining pool workers using public API.</p>
+                                <a href='javascript: window.open("{{ self.referredLink }})"'>LTCRabbit</a> mining pool workers using public API.</p>
                         </div>
                     </td>
                 </tr>
